added master controller for initializing a service added master routes for routing the service added ecrAppRunnerController handling that logic changed .yml to only deploy on main branch fixed naming with app.js -> appfile.js made git and framework controllers more modular added some new docs
